# wordle-scheduler

./: Cargo.toml  wrangler.toml
src/: lib.rs
